--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
         -->
         <title>Quamdeen's Website</title>
         <style>
+            h1 {
+                font-family: 'Times New Roman', Times, serif;
+                font-style: italic;
+                color:bisque;
+                text-align: center;
+            }
             /* Style rules go here. */
         </style>
     </head>
@@ -36,9 +42,9 @@
         - [ ] Any time after
         -->
         <img id="header-img" src="./img/logo500.png"/>
-        <h1>Quamdeen's Project</h1>
-        <h2>Eid Al-Adha</h2>
-        <button type="button">Button 1</button>
+        <h1>Eid Al Fitr</h1>
+        <h2 style="text-align: center;">Eat, Drink, Play, Pray, and Celebrate</h2>
+        <button type="button">Pay Zakat</button>
         <button type="button">Button 2</button>
 
         
@@ -60,7 +66,7 @@
         <h3>What to Expect</h3>
         <h4>Tag Line</h4>
         <ul>
-            <li> <b>Bullet 1:</b> <i>Description</i></li>
+            <li> <b style="color:green">Bullet 1:</b> <i>Description</i></li>
             <li> <b>Bullet 2:</b> <i>Description</i></li>
             <li> <b>Bullet 3:</b> <i>Description</i></li>
         </ul>
@@ -103,7 +109,7 @@
         - [ ] Project 4 (STRETCH FEATURE) 
         - [ ] Any time between / after
         --> 
-        <h2>Links</h2>
+        <h2>References</h2>
 
         <!-- This <a> block is one link.  Copy and paste all 6 lines to create another link. -->
         <a class="block" href="https://www.codepath.org">
