--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         - [ ] Project 2 (STRETCH FEATURE) (favicon)
         - [ ] Any time after
         -->
+        <link rel="stylesheet" href="styles.css">
         <title>Quamdeen's Website</title>
         <style>
             h1 {
@@ -119,7 +120,9 @@
             </article>
         </a>
             
-        <!-- footer [PLACEHOLDER] [ADDED IN UNIT 3] -->
+        <footer>
+            <p>Learn more about Islam <a href="https://ccdawah.org/interested-about-islaam/" target="_blank"> here</a></p>
+        </footer>
         <!-- script [PLACEHOLDER] [ADDED IN UNIT 5] -->
 
     </body>
