--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
             
         <div class="zakat-bruh">
         <h3>Event Activity 2</h3>
-        <p><a href="https://abukhadeejah.com/the-rulings-of-zakat-al-fitr/" target="_blank">Learn More About Zakat-Al Fitr here</a></p>
-        <button type="button">Pay Zakat</button>        
+        <p style="margin-top: 0px;"><a href="https://abukhadeejah.com/the-rulings-of-zakat-al-fitr/" target="_blank">Learn More About Zakat-Al Fitr here</a></p>
+        <button type="button" style="background-color:brown">Pay Zakat</button>        
         </div>
 
         <h3>What to Expect</h3>
@@ -147,4 +147,4 @@
         <!-- script [PLACEHOLDER] [ADDED IN UNIT 5] -->
 
     </body>
-</html>
+</html>>
