--- a/index.html
+++ b/index.html
@@ -229,6 +229,16 @@ When To Modify:
         </div>
     </div>
     <!-- success modal [PLACEHOLDER] [ADDED IN UNIT 9] -->
+    <div id="success-modal" class="modal">
+        <div class="modal-container">
+            <div id="modal-item">
+                <p>Woohoo, you've registered! Can't wait to see you there!</p>
+            </div>
+            <div id="modal-item">
+                <img id="modal-image" src="img/pineapple-supply-co-NgDapgpAiTE-unsplash.jpg" alt="Modal Item" width="300" height="250">
+            </div>
+        </div>
+    </div>
 
     <!-- links
 
